add_subdirectory(1_1_hello_window)
add_subdirectory(1_2_hello_triangle)
add_subdirectory(1_2_hello_triangle_index)
add_subdirectory(1_2_hello_triangle_exercise1)
add_subdirectory(1_2_hello_triangle_exercise2)
add_subdirectory(1_2_hello_triangle_exercise3)
add_subdirectory(1_3_shader_uniform)
add_subdirectory(1_3_shader_interpolation)
add_subdirectory(1_3_shader_class)
add_subdirectory(1_3_shader_exercise1)
add_subdirectory(1_3_shader_exercise2)
add_subdirectory(1_3_shader_exercise3)
add_subdirectory(1_4_textures)